[gd_scene load_steps=2 format=3 uid="uid://bymsvj5d3666r"]

[ext_resource type="Script" path="res://parts/Clock.gd" id="3_3oidf"]

[node name="Clock" type="GraphNode"]
offset_left = 40.0
offset_top = 47.0
offset_right = 177.0
offset_bottom = 271.0
mouse_filter = 1
theme_override_constants/separation = 20
title = "Clock"
slot/0/left_enabled = false
slot/0/left_type = 1
slot/0/left_color = Color(0, 0, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.980392, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(0.980392, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(0.980392, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("3_3oidf")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PulseButton" type="Button" parent="HB"]
layout_mode = 2
focus_mode = 0
text = "Pulse"

[node name="Label" type="Label" parent="HB"]
layout_mode = 2
size_flags_horizontal = 3
text = "out"
horizontal_alignment = 2

[node name="Rate" type="HSlider" parent="."]
layout_mode = 2
max_value = 60.0

[node name="HB2" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResetButton" type="Button" parent="HB2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "Reset"

[node name="Label" type="Label" parent="HB2"]
layout_mode = 2
text = "reset"

[node name="Tag" type="LineEdit" parent="."]
layout_mode = 2
expand_to_text_length = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="HB/PulseButton" to="." method="_on_pulse_button_button_down"]
[connection signal="button_up" from="HB/PulseButton" to="." method="_on_pulse_button_button_up"]
[connection signal="value_changed" from="Rate" to="." method="_on_rate_value_changed"]
[connection signal="button_down" from="HB2/ResetButton" to="." method="_on_reset_button_button_down"]
[connection signal="button_up" from="HB2/ResetButton" to="." method="_on_reset_button_button_up"]
[connection signal="toggled" from="HB2/ResetButton" to="." method="_on_reset_button_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
